--- a/styles/globals.css
+++ b/styles/globals.css
@@ -84,6 +84,7 @@ video {
   border: 0;
   font-size: 100%;
   font: inherit;
+  font-family: "Noto Sans KR", sans-serif;
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -131,4 +132,8 @@ table {
 button {
   border: none;
   background-color: inherit;
+}
+
+div {
+  display: flex;
 }
